@@ -10,25 +10,28 @@ import lombok.RequiredArgsConstructor;
 import org.example.management.system.model.constant.DictConstant;
 import org.example.management.system.model.entity.Attachment;
 import org.example.management.system.model.entity.Dict;
+import org.example.management.system.model.entity.Report;
 import org.example.management.system.model.param.AttachmentParam;
 import org.example.management.system.model.vo.AttachmentVo;
 import org.example.management.system.repository.AttachmentRepository;
+import org.example.management.system.repository.ReportRepository;
 import org.example.management.system.utils.DateTimeUtils;
 import org.jetbrains.annotations.NotNull;
+import org.springframework.data.domain.Example;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 import org.springframework.util.Assert;
+import org.springframework.util.MimeType;
 import org.springframework.web.multipart.MultipartFile;
 
 import javax.persistence.criteria.*;
 import java.time.LocalDateTime;
-import java.util.Collections;
-import java.util.Date;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * 资源服务
@@ -43,14 +46,18 @@ public class AttachmentService {
 
     private final DictService dictService;
 
+    private final ReportRepository reportRepository;
+
     public AttachmentVo uploadAttachment(MultipartFile file) {
         List<Dict> items = dictService.getDictItemsBy(DictConstant.MEDIA_FORMAT);
-        Assert.isTrue(items.size() > 0,"当前系统不支持文件上传 !!!");
+        Assert.isTrue(items.size() > 0, "当前系统不支持文件上传 !!!");
         String contentType = file.getContentType();
-        contentType = ElvisUtil.stringElvis(contentType,ElvisUtil.stringElvis(file.getOriginalFilename(),file.getName()).substring(file.getOriginalFilename().lastIndexOf(".") + 1));
+        contentType = ElvisUtil.stringElvis(contentType, ElvisUtil.stringElvis(file.getOriginalFilename(), file.getName()).substring(file.getOriginalFilename().lastIndexOf(".") + 1));
         String finalContentType = contentType;
-        Optional<Dict> dict = items.stream().filter(ele -> ele.getItemType().equals(finalContentType.trim())).findFirst();
-        Assert.isTrue(dict.isPresent(),"当前系统不支持[" + file.getContentType() + "]类型文件上传,请检查 !!!");
+        Optional<Dict> dict = items.stream().filter(ele ->
+                MediaType.asMediaType(MimeType.valueOf(ele.getItemType())).isCompatibleWith(new MediaType(finalContentType.trim()))
+        ).findFirst();
+        Assert.isTrue(dict.isPresent(), "当前系统不支持[" + file.getContentType() + "]类型文件上传,请检查 !!!");
         try {
             LocalDateTime now = LocalDateTime.now();
             Attachment attachment = Attachment
@@ -70,9 +77,9 @@ public class AttachmentService {
 
             // 直接保存 !!!
             attachmentRepository.save(attachment);
-            assert  attachmentVo != null;
+            assert attachmentVo != null;
             return attachmentVo;
-        }catch (Exception e) {
+        } catch (Exception e) {
             throw new IllegalStateException("无法保存此附件,原因是无系统权限或者系统目录配置不正确或者其他原因 !!!");
         }
     }
@@ -86,10 +93,10 @@ public class AttachmentService {
     public void deleteAttachment(Integer id) {
         attachmentRepository.findById(id).ifPresent(file -> {
             try {
-                fileService.deleteFile("attachment",file.getFileUrl());
-            }catch (Exception e){
+                fileService.deleteFile("attachment", file.getFileUrl());
+            } catch (Exception e) {
                 // pass
-            } finally{
+            } finally {
                 attachmentRepository.deleteById(id);
             }
 
@@ -101,10 +108,32 @@ public class AttachmentService {
                 attachmentParam.getEndTimeAt());
 
         Page<Attachment> all = attachmentRepository.findAll(specification, pageable);
-        if(all.hasContent()) {
-            return new PageImpl<>(all.getContent().stream().map(BeanUtils.transformFrom(AttachmentVo.class)).toList(),all.getPageable(),all.getTotalElements());
+        if (all.hasContent()) {
+            List<Integer> attachmentIds = new ArrayList<>();
+            List<Report> reports = reportRepository.findAll(
+                    new CollectionSpecification<>(LambdaUtils.getPropertyNameForLambda(Report::getReportUrlId), attachmentIds));
+            Map<Integer, List<Report>> map = ElvisUtil.acquireNotNullList_Empty(reports)
+                    .stream().collect(Collectors.groupingBy(Report::getReportUrlId, Collectors.toList()));
+
+            return new PageImpl<>(all.getContent().stream().peek(ele -> {
+                attachmentIds.add(ele.getId());
+            }).map(BeanUtils.transformFrom(AttachmentVo.class)).peek(ele -> {
+                List<Report> list = map.get(ele.getId());
+                ele.setReportRRCount(list != null ? list.size() : 0);
+            }).toList(), all.getPageable(), all.getTotalElements());
         }
-        return new PageImpl<>(Collections.emptyList(),pageable,all.getTotalElements());
+        return new PageImpl<>(Collections.emptyList(), pageable, all.getTotalElements());
+    }
+
+    @AllArgsConstructor
+    class CollectionSpecification<T> implements Specification<Report> {
+        private String name;
+        private List<T> values;
+
+        @Override
+        public Predicate toPredicate(@NotNull Root<Report> root, @NotNull CriteriaQuery<?> query, @NotNull CriteriaBuilder criteriaBuilder) {
+            return root.get(name).in(values);
+        }
     }
 
     @AllArgsConstructor
@@ -124,10 +153,10 @@ public class AttachmentService {
 
             return OptionalFlux
                     .of(mediaType)
-                    .map(type -> criteriaBuilder.equal(root.get(LambdaUtils.getPropertyNameForLambda(Attachment::getMediaType)),type))
+                    .map(type -> criteriaBuilder.equal(root.get(LambdaUtils.getPropertyNameForLambda(Attachment::getMediaType)), type))
                     .combine(
-                            OptionalFlux.of(ElvisUtil.stringElvis(fileName,null))
-                                    .map(name -> criteriaBuilder.like(root.get(LambdaUtils.getPropertyNameForLambda(Attachment::getFileName)),name))
+                            OptionalFlux.of(ElvisUtil.stringElvis(fileName, null))
+                                    .map(name -> criteriaBuilder.like(root.get(LambdaUtils.getPropertyNameForLambda(Attachment::getFileName)), name))
                             ,
                             criteriaBuilder::and
                     )
@@ -136,13 +165,13 @@ public class AttachmentService {
                                     .map(startTime -> {
                                         Path<Long> path = root.get(LambdaUtils.getPropertyNameForLambda(Attachment::getCreateAt));
                                         return OptionalFlux.of(endTimeAt)
-                                                .map(endTime -> criteriaBuilder.between(path,startTime,endTime))
-                                                .orElse(criteriaBuilder.greaterThanOrEqualTo(path,startTime))
+                                                .map(endTime -> criteriaBuilder.between(path, startTime, endTime))
+                                                .orElse(criteriaBuilder.greaterThanOrEqualTo(path, startTime))
                                                 .<Predicate>getResult();
                                     })
                                     .orElse(
                                             OptionalFlux.of(endTimeAt)
-                                                    .map(endTime -> criteriaBuilder.lessThanOrEqualTo(root.get(LambdaUtils.getPropertyNameForLambda(Attachment::getCreateAt)),endTime))
+                                                    .map(endTime -> criteriaBuilder.lessThanOrEqualTo(root.get(LambdaUtils.getPropertyNameForLambda(Attachment::getCreateAt)), endTime))
                                                     .<Predicate>getResult()
                                     )
                             ,
